force send feature added. Gmail scope removed while sign in. So, can build release apk on this commit

--- a/app/src/main/res/values/email_template.xml
+++ b/app/src/main/res/values/email_template.xml
@@ -44,7 +44,7 @@
       <th>Invoice Number</th>
       <th>Invoice Date</th>
       <th>Amount</th>
-      <th>Overdue Days</th>
+      <th>Age In Days</th>
     </tr>
     %3$s
   </table>
