--- a/app/src/main/res/values/intimation_template.xml
+++ b/app/src/main/res/values/intimation_template.xml
@@ -49,6 +49,15 @@
     %3$s
   </table>
   <br>
+
+  <p>
+  <b>Our Bank Details</b><br>
+  Bank Name: ICICI Bank Ltd, Sivakasi<br>
+  Account Name: PAPCO OFFSET PRIVATE LIMITED<br>
+  Account Number: 617205013029<br>
+  IFSC Code: ICIC0006172<br>
+  <p>
+
   <p>In case of any clarifications, kindly contact us by replying to this email.</p>
 
   <br><p>Best Regards<br>Director<br><b>%4$s</b></p>
